--- a/OrionUO/CMakeLists.txt
+++ b/OrionUO/CMakeLists.txt
@@ -415,8 +415,8 @@ else()
     set_target_properties(orion PROPERTIES COTIRE_CXX_PREFIX_HEADER_INIT "stdafx.h")
     cotire(orion)
     if(ORION_OSX)
-      add_custom_command(TARGET orion POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "liborion.dylib" "${CMAKE_BINARY_DIR}/orion.so")
-      add_custom_command(TARGET orion_unity POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "unity/liborion.dylib" "${CMAKE_BINARY_DIR}/orion.so")
+      add_custom_command(TARGET orion POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/liborion.dylib" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/orion.so")
+      add_custom_command(TARGET orion_unity POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/unity/liborion.dylib" "$${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/orion.so")
     else()
       add_custom_command(TARGET orion POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "liborion.so" "${CMAKE_BINARY_DIR}/orion.so")
       add_custom_command(TARGET orion_unity POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "unity/liborion.so" "${CMAKE_BINARY_DIR}/orion.so")
